Version 3.4.0 - 2014-11-10
* Initial release