@@ -22,4 +22,14 @@
     <field name="in_guarantee"/>
     <field name="guarantee_sale_lines" colspan="4"/>
     <field name="guarantee_invoice_lines" colspan="4"/>
+    <group col="4" colspan="4" id="contract_buttons">
+        <label name="state" xalign="1.0" xexpand="1"/>
+        <field name="state" xalign="1.0" xexpand="0"/>
+        <group col="7" colspan="2" id="buttons">
+            <button name="cancel" string="Cancel" icon="tryton-cancel"/>
+            <button name="draft" string="Draft" icon="tryton-go-previous"/>
+            <button name="active" string="Active" icon="tryton-go-next"/>
+            <button name="finish" string="Finish" icon="tryton-ok"/>
+        </group>
+    </group>
 </form>
