@@ -1,2 +1,4 @@
+* Add workflow on guarantee
+
 Version 3.4.0 - 2014-11-10
 * Initial release
